// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Backdrop Closedby Any 1`] = `
<button
  aria-haspopup="dialog"
  data-variant="secondary"
  type="button"
>
  Åpne Dialog
</button>
<dialog
  closedby="any"
  data-modal="true"
  data-placement="center"
  id="<removed>"
  open
>
  <button
    aria-label="Lukk dialogvindu"
    command="close"
    commandfor="_r_5_"
    data-color="neutral"
    data-icon="true"
    data-variant="tertiary"
    type="button"
  >
  </button>
  <h2>
    Dialog med
    <code>
      closedby="any"
    </code>
  </h2>
  <p data-variant="default">
    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
  </p>
</dialog>
`;

exports[`Custom Close Button 1`] = `
<button
  aria-haspopup="dialog"
  command="show-modal"
  commandfor="custom-close-button-dialog"
  data-variant="secondary"
  type="button"
>
  Åpne Dialog med tilpasset lukkeknapp
</button>
<dialog
  data-modal="true"
  data-placement="center"
  id="<removed>"
  open
>
  <button
    command="close"
    commandfor="custom-close-button-dialog"
    data-variant="secondary"
    type="button"
  >
    Lukk
  </button>
  <div>
    <h2>
      Dialog med tilpasset lukkeknapp
    </h2>
    <p data-variant="default">
      Her har vi erstattet det vanlige lukkekrysset med en knapp med tekst
    </p>
    <p data-variant="default">
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
    </p>
  </div>
</dialog>
`;

exports[`Dialog Non Modal 1`] = `
<ds-field style="width: 400px;">
  <label
    data-weight="medium"
    for="<removed>"
  >
    Besvarelse
  </label>
  <textarea
    id="<removed>"
    rows="8"
    style="--_ds-field-sizing: <removed>;"
  >
  </textarea>
</ds-field>
<button
  data-variant="secondary"
  type="button"
>
  Åpne skrivetips
</button>
<dialog
  data-modal="false"
  data-placement="center"
  id="<removed>"
  open
  style="width: 300px; left: 80%;"
>
  <button
    aria-label="Lukk dialogvindu"
    command="close"
    commandfor="_r_b_"
    data-color="neutral"
    data-icon="true"
    data-variant="tertiary"
    type="button"
  >
  </button>
  <h2 style="margin-bottom: var(--ds-size-2);">
    Hva besvarelsen burde inneholde
  </h2>
  <ul>
    <li>
      intro til prosjektet
    </li>
    <li>
      oversikt over hva som er gjort i prosjektet
    </li>
    <li>
      beskrivelse av prosjektmålene
    </li>
    <li>
      metode for å oppnå prosjektmålene
    </li>
    <li>
      leveranse
    </li>
  </ul>
</dialog>
`;

exports[`Dialog With Form 1`] = `
<button
  aria-haspopup="dialog"
  data-variant="primary"
  type="button"
>
  Send inn skjema
</button>
<dialog
  closedby="any"
  data-modal="true"
  data-placement="center"
  id="<removed>"
  open
>
  <button
    aria-label="Lukk dialogvindu"
    command="close"
    commandfor="dialog-with-form"
    data-color="neutral"
    data-icon="true"
    data-variant="tertiary"
    type="button"
  >
  </button>
  <h2 style="margin-bottom: var(--ds-size-2);">
    Skjemainnsending
  </h2>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      Navn
    </label>
    <div>
      <input
        autofocus="true"
        id="<removed>"
        type="text"
        value
      >
    </div>
  </ds-field>
  <div style="display: flex; gap: var(--ds-size-2); margin-top: var(--ds-size-4);">
    <button
      command="close"
      commandfor="dialog-with-form"
      data-variant="primary"
      type="button"
    >
      Send inn skjema
    </button>
    <button
      command="close"
      commandfor="dialog-with-form"
      data-variant="secondary"
      type="button"
    >
      Avbryt
    </button>
  </div>
</dialog>
`;

exports[`Dialog With Max Width 1`] = `
<button
  aria-haspopup="dialog"
  data-variant="secondary"
  type="button"
>
  Åpne Dialog
</button>
<dialog
  data-modal="true"
  data-placement="center"
  id="<removed>"
  open
  style="max-width: 1200px;"
>
  <button
    aria-label="Lukk dialogvindu"
    command="close"
    commandfor="_r_8_"
    data-color="neutral"
    data-icon="true"
    data-variant="tertiary"
    type="button"
  >
  </button>
  <h2 style="margin-bottom: var(--ds-size-2);">
    Dialog som er veldig bred
  </h2>
  <p data-variant="default">
    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
  </p>
</dialog>
`;

exports[`Dialog With Open Prop 1`] = `
<button
  aria-haspopup="dialog"
  data-variant="primary"
  type="button"
>
  Åpne Dialog med ekstern tilstand
</button>
<dialog
  data-modal="true"
  data-placement="center"
  id="<removed>"
  open
>
  <button
    aria-label="Lukk dialogvindu"
    command="close"
    commandfor="_r_3_"
    data-color="neutral"
    data-icon="true"
    data-variant="tertiary"
    type="button"
  >
  </button>
  <div>
    <h2>
      Dialog med ekstern tilstand
    </h2>
    <p data-variant="default">
      Her setter vi en ekstern tilstand med
      <code>
        open
      </code>
      og styrer denne for å åpne og lukke dialogen.
    </p>
    <p data-variant="default">
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
    </p>
    <button
      data-variant="secondary"
      type="button"
    >
      Lukk dialog
    </button>
  </div>
</dialog>
`;

exports[`Dialog With Suggestion 1`] = `
<button
  aria-haspopup="dialog"
  data-variant="secondary"
  type="button"
>
  Åpne Dialog
</button>
<dialog
  data-modal="true"
  data-placement="center"
  id="<removed>"
  open
  style="overflow: visible;"
>
  <button
    aria-label="Lukk dialogvindu"
    command="close"
    commandfor="_r_9_"
    data-color="neutral"
    data-icon="true"
    data-variant="tertiary"
    type="button"
  >
  </button>
  <div>
    <h2>
      Dialog med innhold utenfor
    </h2>
  </div>
  <div>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Velg en kommune
      </label>
      <ds-suggestion>
        <input
          aria-autocomplete="list"
          aria-controls=":ds:3"
          aria-expanded="true"
          aria-label="Velg en kommune​​​​​"
          autocomplete="off"
          data-label="Velg en kommune"
          id="<removed>"
          list=":ds:3"
          placeholder=" "
          popovertarget=":ds:3"
          role="combobox"
          type="text"
        >
        <del
          aria-label="Tøm"
          hidden
          role="button"
        >
        </del>
        <u-datalist
          aria-multiselectable="false"
          data-nofilter
          data-sr-plural="%d forslag"
          data-sr-singular="%d forslag"
          hidden
          id="<removed>"
          popover="manual"
          role="listbox"
          tabindex="-1"
        >
          <u-option
            aria-disabled="false"
            aria-selected="false"
            label="Sogndal"
            role="option"
            tabindex="-1"
            value="Sogndal"
          >
            Sogndal
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            aria-disabled="false"
            aria-selected="false"
            label="Oslo"
            role="option"
            tabindex="-1"
            value="Oslo"
          >
            Oslo
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            aria-disabled="false"
            aria-selected="false"
            label="Brønnøysund"
            role="option"
            tabindex="-1"
            value="Brønnøysund"
          >
            Brønnøysund
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            aria-disabled="false"
            aria-selected="false"
            label="Stavanger"
            role="option"
            tabindex="-1"
            value="Stavanger"
          >
            Stavanger
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            aria-disabled="false"
            aria-selected="false"
            label="Trondheim"
            role="option"
            tabindex="-1"
            value="Trondheim"
          >
            Trondheim
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            aria-disabled="false"
            aria-selected="false"
            label="Bergen"
            role="option"
            tabindex="-1"
            value="Bergen"
          >
            Bergen
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            aria-disabled="false"
            aria-selected="false"
            label="Lillestrøm"
            role="option"
            tabindex="-1"
            value="Lillestrøm"
          >
            Lillestrøm
            <div>
              Kommune
            </div>
          </u-option>
        </u-datalist>
      </ds-suggestion>
    </ds-field>
  </div>
  <div style="display: flex; gap: var(--ds-size-2);">
    <button
      data-variant="primary"
      type="button"
    >
      Send inn
    </button>
    <button
      data-variant="secondary"
      type="button"
    >
      Avbryt
    </button>
  </div>
</dialog>
`;

exports[`Drawer 1`] = `
<div style="display: flex; flex-direction: column; align-items: center;">
  <ds-field
    data-clickdelegatefor="<removed>"
    style="margin-bottom: var(--ds-size-4);"
  >
    <input
      checked
      id="<removed>"
      type="checkbox"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Modal
    </label>
  </ds-field>
  <fieldset>
    <div style="display: flex; flex-wrap: wrap; gap: var(--ds-size-5); margin-bottom: var(--ds-size-8);">
      <ds-field data-clickdelegatefor="<removed>">
        <input
          id="<removed>"
          name="drawer"
          type="radio"
          value="center"
        >
        <label
          data-weight="regular"
          for="<removed>"
        >
          Midten
        </label>
      </ds-field>
      <ds-field data-clickdelegatefor="<removed>">
        <input
          id="<removed>"
          name="drawer"
          type="radio"
          value="top"
        >
        <label
          data-weight="regular"
          for="<removed>"
        >
          Topp
        </label>
      </ds-field>
      <ds-field data-clickdelegatefor="<removed>">
        <input
          id="<removed>"
          name="drawer"
          type="radio"
          value="bottom"
        >
        <label
          data-weight="regular"
          for="<removed>"
        >
          Bunn
        </label>
      </ds-field>
      <ds-field data-clickdelegatefor="<removed>">
        <input
          id="<removed>"
          name="drawer"
          type="radio"
          value="left"
        >
        <label
          data-weight="regular"
          for="<removed>"
        >
          Venstre
        </label>
      </ds-field>
      <ds-field data-clickdelegatefor="<removed>">
        <input
          id="<removed>"
          name="drawer"
          type="radio"
          value="right"
        >
        <label
          data-weight="regular"
          for="<removed>"
        >
          Høyre
        </label>
      </ds-field>
    </div>
  </fieldset>
  <button
    aria-haspopup="dialog"
    data-variant="primary"
    type="button"
  >
    Open Dialog
  </button>
  <dialog
    closedby="any"
    data-modal="true"
    data-placement="bottom"
    id="<removed>"
    open
    style="z-index: 10;"
  >
    <button
      aria-label="Lukk dialogvindu"
      command="close"
      commandfor="_r_c_"
      data-color="neutral"
      data-icon="true"
      data-variant="tertiary"
      type="button"
    >
    </button>
    <div>
      <p data-variant="default">
        This is a modal Dialog with
        <code>
          placement="bottom"
        </code>
      </p>
    </div>
  </dialog>
</div>
`;

exports[`Preview 1`] = `
<div>
  <button
    aria-haspopup="dialog"
    data-variant="primary"
    type="button"
  >
    Åpne Dialog
  </button>
  <dialog
    closedby="any"
    data-modal="true"
    data-placement="center"
    id="<removed>"
    open
    style="z-index: 10;"
  >
    <button
      aria-label="Lukk dialogvindu"
      command="close"
      commandfor="_r_0_"
      data-color="neutral"
      data-icon="true"
      data-variant="tertiary"
      type="button"
    >
    </button>
    <h2 style="margin-bottom: var(--ds-size-2);">
      Dialog header
    </h2>
    <p
      data-variant="default"
      style="margin-bottom: var(--ds-size-2);"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
    </p>
    <p
      data-size="sm"
      data-variant="default"
    >
      Dialog footer
    </p>
  </dialog>
</div>
`;

exports[`With Header And Footer 1`] = `
<button
  aria-haspopup="dialog"
  data-variant="primary"
  type="button"
>
  Gå til neste
</button>
<dialog
  data-modal="true"
  data-placement="center"
  id="<removed>"
  open
>
  <button
    aria-label="Lukk dialogvindu"
    command="close"
    commandfor="_r_6_"
    data-color="neutral"
    data-icon="true"
    data-variant="tertiary"
    type="button"
  >
  </button>
  <div>
    <p
      data-size="sm"
      data-variant="default"
    >
      Undertittel
    </p>
    <h2>
      Dette må du vite før du går videre
    </h2>
  </div>
  <div>
    <p
      data-variant="default"
      style="margin-bottom: var(--ds-size-2);"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sodales eros justo. Aenean non mi ipsum. Cras viverra elit nec vulputate mattis. Nunc placerat euismod pulvinar. Sed nec fringilla nulla, sit amet ultricies ante. Morbi egestas venenatis massa, eu interdum leo rutrum eu. Nulla varius, mi ac feugiat lacinia, magna eros ullamcorper arcu, vel tincidunt erat leo nec tortor. Sed ut dui arcu. Morbi commodo ipsum hendrerit est imperdiet imperdiet. Etiam sed maximus nisi. Quisque posuere posuere orci, non egestas risus facilisis a. Vivamus non tempus felis, in maximus lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
    </p>
    <p data-variant="default">
      Etiam nec tincidunt est. Integer semper sodales efficitur. Pellentesque pellentesque varius leo id congue. Integer lacinia porttitor massa id euismod. Maecenas porta, magna nec interdum eleifend, risus magna condimentum neque, a gravida nisl risus a elit. Donec accumsan metus et lectus placerat varius. Donec tristique odio arcu. Donec cursus leo a dui auctor pulvinar. Sed in elit urna. Nunc vitae magna sed nibh elementum dignissim et ut massa.
    </p>
  </div>
  <div>
    Footer
  </div>
</dialog>
`;

exports[`Without Dialog Trigger Context 1`] = `
<button
  aria-haspopup="dialog"
  data-variant="secondary"
  type="button"
>
  Åpne Dialog med ref
</button>
<dialog
  data-modal="true"
  data-placement="center"
  id="<removed>"
  open
>
  <button
    aria-label="Lukk dialogvindu"
    command="close"
    commandfor="_r_1_"
    data-color="neutral"
    data-icon="true"
    data-variant="tertiary"
    type="button"
  >
  </button>
  <div>
    <h2>
      Dialog med
      <code>
        ref
      </code>
    </h2>
    <p data-variant="default">
      Her bruker vi
      <code>
        ref
      </code>
      for å åpne og lukke dialogen
    </p>
    <p data-variant="default">
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
    </p>
  </div>
  <button
    data-variant="secondary"
    type="button"
  >
    Lukk dialog
  </button>
</dialog>
`;

exports[`Without Dialog Trigger Context With Command 1`] = `
<button
  aria-haspopup="dialog"
  command="show-modal"
  commandfor="dialog-with-command"
  data-variant="primary"
  type="button"
>
  Åpne Dialog med command
</button>
<dialog
  data-modal="true"
  data-placement="center"
  id="<removed>"
  open
>
  <button
    aria-label="Lukk dialogvindu"
    command="close"
    commandfor="dialog-with-command"
    data-color="neutral"
    data-icon="true"
    data-variant="tertiary"
    type="button"
  >
  </button>
  <div>
    <h2>
      Dialog med
      <code>
        command
      </code>
    </h2>
    <p data-variant="default">
      Her bruker vi
      <code>
        command
      </code>
      og
      <code>
        commandfor
      </code>
      for å åpne og lukke dialogen
    </p>
    <p data-variant="default">
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
    </p>
    <button
      command="close"
      commandfor="dialog-with-command"
      data-variant="secondary"
      type="button"
    >
      Lukk dialog
    </button>
  </div>
</dialog>
`;
